# Agentic_ChatBot

./: .code-workspace  .gitignore
client/: .cta.json  .gitignore  biome.json  components.json  package.json  vite.config.ts
client/app/: app.css  root.tsx  routes.ts
client/app/components/: ThemeToggle.tsx
client/app/lib/: ZustandStore.ts  kyClient.ts  zodSchema.ts
client/app/routes/: home.tsx  index.tsx  login.tsx  protected-layout.tsx  public-layout.tsx  register.tsx
client/src/: routeTree.gen.ts  styles.css
client/src/components/: ThemeToggle.tsx
client/src/lib/: KyClient.ts  demoData.ts
client/src/routes/: __root.tsx  home.tsx  index.tsx
client/src/routes/(auth)/: login.tsx  register.tsx
client/src/schemas/: auth.ts
server/: .gitignore  README.md  main.py  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 10c195cb328f_initial.py  8d66b28e3cb5_create_thread_msg_table.py  90f50f85d2d5_create_thread_msg_table.py  c846a1efcd1b_create_users_and_refresh_tokens_table.py  e78e5d477cfc_create_thread_msg_table.py  f247ef6836c8_created_doc_table.py  f5ea1f620952_create_thread_msg_table.py  f6f898c7a033_thread_id_uuid.py
server/app/: index.py
server/app/configs/: app_configs.py  custom_error.py  middleware.py
server/app/controllers/: auth.py  chat.py  doc_upload_pipeline.py
server/app/core/: app_configs.py  cloudflare_r2_config.py  exception_handler.py  logging.py  middleware.py
server/app/database/: db.py
server/app/langchain/: chat_engine.py  llm.py  rag_workflow.py  tools.py
server/app/models/: chats.py  document.py  user.py
server/app/repositories/: message_repo.py  refresh_token_repo.py  thread_repo.py  user_repo.py
server/app/routes/: auth.py  chatmodel.py  document.py
server/app/schema/: authSchema.py  chatSchema.py
server/app/service/: auth.py  chat.py  doc_upload_pipeline.py
server/app/services/: cloudflare_r2.py
server/app/utils/: prompts.py  security.py
server/app/vectorstores/: base.py  chromadb.py  pinecone.py
(+1 files in other folders)
