[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.136.3",
    "langchain>=1.3.11",
    "langchain-ollama>=1.1.0",
    "psycopg2>=2.9.12",
    "pydantic>=2.13.4",
    "pyjwt>=2.13.0",
    "sqlalchemy>=2.0.50",
]

[tool.ruff]
line-length = 100
target-version = "py313"


[tool.ruff.lint]
select = [
    "E",
    "F",
    # "I",
    "UP",
]
ignore = ["E302", "E303", "E305"]
