[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "boto3>=1.43.50",
    "chromadb>=1.5.9",
    "ddgs>=9.14.4",
    "fastapi[standard]>=0.136.3",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.6",
    "pinecone>=9.1.0",
    "psycopg2>=2.9.12",
    "pydantic>=2.13.4",
    "pyjwt>=2.13.0",
    "pypdf>=6.14.2",
    "python-multipart>=0.0.32",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.50",
]

[tool.ruff]
line-length = 120
target-version = "py313"


[tool.ruff.lint]
select = [
    "E",
    "F",
    # "I",
    "UP",
]
ignore = ["E302", "E303", "E305"]

[dependency-groups]
dev = [
    "boto3-stubs[s3]>=1.43.50",
]
